tests/harness/errors/142_render_unknown_format.eu
# render-as with an unknown format symbol should produce an UnknownRenderFormat
# error, not a generic panic.
result: "hello" render-as(:badformat)
